# crypto-ai-dca-advisor-rs

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  styles.css
crates/agent-core/: Cargo.toml
crates/agent-core/src/: error.rs  lib.rs  message.rs  provider.rs  reasoning.rs  session.rs  tool.rs
crates/agent-payments/: Cargo.toml
crates/agent-payments/src/: checkout.rs  error.rs  lib.rs  license.rs  webhook.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: lib.rs  ollama.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: handlers.rs  main.rs  state.rs
crates/agent-web/: Cargo.toml
crates/agent-web/src/: api.rs  app.rs  components.rs  lib.rs
crates/agent-web/src/pages/: chat.rs  home.rs  mod.rs  pricing.rs
crates/crypto-advisor/: Cargo.toml
crates/crypto-advisor/src/: error.rs  lib.rs  model.rs
crates/crypto-advisor/src/exchange/: mock.rs  mod.rs
crates/crypto-advisor/src/strategy/: dca.rs  diversification.rs  mod.rs
crates/crypto-advisor/src/svckit/: dca_calculator.rs  mod.rs  portfolio_tracker.rs  price_lookup.rs  risk_analyzer.rs
