[package]
name = "agent-core"
description = "Core agent logic with LLM provider abstraction and tool execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "=1.42.0", features = ["sync", "time"] }
futures = "=0.3.31"
async-trait = "=0.1.83"

# Serialization
serde = { version = "=1.0.216", features = ["derive"] }
serde_json = "=1.0.133"

# Error handling
thiserror = "=2.0.9"
anyhow = "=1.0.94"

# Logging
tracing = "=0.1.41"

# Time
chrono = { version = "=0.4.39", features = ["serde"] }

# UUID for conversation/session IDs
uuid = { version = "=1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "=1.42.0", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
