[package]
name = "agent-payments"
description = "Payment processing and license management for rust-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "=1.42.0", features = ["sync"] }
async-trait = "=0.1.83"

# HTTP/API
axum = { version = "=0.8.1", features = ["macros"], optional = true }
reqwest = { version = "=0.12.12", features = ["json"] }

# Stripe
async-stripe = { version = "=0.41.0", default-features = false, features = [
    "runtime-tokio-hyper",
    "checkout",
    "webhook-events",
    "billing",
] }

# Serialization
serde = { version = "=1.0.216", features = ["derive"] }
serde_json = "=1.0.133"

# Error handling
thiserror = "=2.0.9"
anyhow = "=1.0.94"

# Logging
tracing = "=0.1.41"

# Time & IDs
chrono = { version = "=0.4.39", features = ["serde"] }
uuid = { version = "=1.11.0", features = ["v4", "serde"] }

# HMAC for webhook verification
hmac = "=0.12.1"
sha2 = "=0.10.8"
hex = "=0.4.3"

[features]
default = []
axum-handlers = ["dep:axum"]

[dev-dependencies]
tokio = { version = "=1.42.0", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
