[package]
name = "agent-runtime"
description = "Runtime providers and integrations for rust-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core agent library
agent-core = { path = "../agent-core" }

# Async runtime
tokio = { version = "=1.42.0", features = ["full"] }
tokio-stream = "=0.1.17"
futures = "=0.3.31"
async-trait = "=0.1.83"

# HTTP client
reqwest = { version = "=0.12.12", features = ["json", "stream"] }

# Serialization
serde = { version = "=1.0.216", features = ["derive"] }
serde_json = "=1.0.133"

# Error handling
thiserror = "=2.0.9"
anyhow = "=1.0.94"

# Logging
tracing = "=0.1.41"

# Ollama client (optional, for native integration)
ollama-rs = { version = "=0.3.1", features = ["stream"], optional = true }

[features]
default = ["ollama"]
ollama = ["dep:ollama-rs"]
# Future providers
# openai = []
# anthropic = []

[dev-dependencies]
tokio = { version = "=1.42.0", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
