[package]
name = "agent-web"
description = "Leptos WASM frontend for rust-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos
leptos = { version = "=0.7.8", features = ["csr"] }
leptos_router = { version = "=0.7.8", features = ["csr"] }

# Serialization
serde = { version = "=1.0.216", features = ["derive"] }
serde_json = "=1.0.133"

# HTTP client for WASM
reqwest = { version = "=0.12.12", features = ["json"] }
wasm-bindgen = "=0.2.99"
wasm-bindgen-futures = "=0.4.49"
web-sys = { version = "=0.3.76", features = ["Window", "Location"] }

# Panic handler
console_error_panic_hook = "=0.1.7"

# Time
chrono = { version = "=0.4.39", features = ["serde", "wasmbind"] }

[lints]
workspace = true
